fixed navbar collapse

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,24 +83,24 @@ a:hover {
 h1, h2, h3 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #4aaaa5;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 h1{
-    font-size: 2.0em;
+    /* font-size: 2.0em; */
 }
 
 h2{
     margin-left: 20px;
     padding-top: 20px;
     padding-bottom: 20px;
-    font-size: 1.5em;
+    /* font-size: 1.5em; */
 }
 
 h3{
     padding-top: 20px;
     padding-bottom: 20px;
-    font-size: 1.3em;
+    /* font-size: 1.3em; */
 }
 
 p, input, label, textarea, .footer{
@@ -148,6 +148,7 @@ hr{
 
 #connect_box {
     /* width: 270px; */
+    /* min-width: 290px; */
     background-color: #ffffff;
     border: #dddddd;
     /* float: right; */
